--- a/lib/Jifty/DefaultApp/web/templates/__jifty/admin/index.html
+++ b/lib/Jifty/DefaultApp/web/templates/__jifty/admin/index.html
@@ -31,10 +31,24 @@
 
 
 </%init>
-<&|/_elements/wrapper &>
+<&|/_elements/wrapper, title => 'Jifty Administrative Console' &>
+
+<h1>Database Administration</h1>
+
+<p>This console lets you manage the records in your Jifty database. Below, you should see a list of all your database tables. Feel free to go through and add, delete or modify records.</p>
+
+<p>To disable this administrative console, add "framework: AdminMode: 0" to your application's configuration file.</p>
+    
+
+
 % foreach my $model (@models) {
 % next unless ($model =~ /^(?:.*)::(.*?)$/);
 % my $type = $1;
-<% Jifty->web->link( url => '/admin/'.$type, label => $type)%>
+<li><% Jifty->web->tangent( url => '/__jifty/admin/'.$type, label => $type)%>
 %}
+
+<h2>All done?</h2>
+<% Jifty->web->return(label => 'Back to wherever you came from') %>
+
+
 </&>
