* Make menus automatically hilight the current page. * Change the default menu style * Pony.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@120 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/lib/Jifty/DefaultApp/web/static/css/base.css
+++ b/lib/Jifty/DefaultApp/web/static/css/base.css
@@ -107,3 +107,36 @@ div#jifty-wait-message {
     top: 10px;
     right: 10px;
 }
+
+
+
+div.warning {
+ position: absolute;
+ top: 0;
+ left: 0;
+ right: 0;
+
+ background-color: red;
+ color: white;
+ padding: .5em;
+ border-bottom: 1px solid #000;
+}
+
+div.warning a {
+ color: white;
+
+}
+
+div#salutation {
+ float: right;
+}
+
+ul.menu {
+  display: block;
+
+}
+
+h1.title {
+  border-bottom: 1px solid black;
+
+}
