--- a/lib/Jifty/DefaultApp/web/static/css/main.css
+++ b/lib/Jifty/DefaultApp/web/static/css/main.css
@@ -1,5 +1,6 @@
 @import "app-base.css";
 @import "base.css";
+@import "nav.css";
 @import "calendar.css";
 @import "combobox.css";
 @import "keybindings.css";
