--- a/lib/Jifty/DefaultApp/web/templates/index.html
+++ b/lib/Jifty/DefaultApp/web/templates/index.html
@@ -1,3 +1,3 @@
-<&|/_elements/wrapper&>
-Welcome to your new Jifty application.
+<&|/_elements/wrapper, title => 'Welcome to your new Jifty application' &>
+<img src="/images/pony.jpg" alt="You said you wanted a pony. (Source http://hdl.loc.gov/loc.pnp/cph.3c13461)" />
 </&>
