--- a/lib/Jifty/DefaultApp/web/templates/__jifty/admin/index.html
+++ b/lib/Jifty/DefaultApp/web/templates/__jifty/admin/index.html
@@ -44,7 +44,7 @@
 % foreach my $model (@models) {
 % next unless ($model =~ /^(?:.*)::(.*?)$/);
 % my $type = $1;
-<li><% Jifty->web->tangent( url => '/__jifty/admin/'.$type, label => $type)%>
+<li><% Jifty->web->link( url => '/__jifty/admin/'.$type, label => $type)%>
 %}
 
 </&>
