* ./lib/Jifty/DefaultApp moved to ./share  * Added magic symlink to ./lib/Jifty/auto/Jifty to make share dir    accessible during dev work  * Re-spec application root dir
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@162 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/online_docs/content.html
+++ b/share/web/templates/__jifty/online_docs/content.html
@@ -12,8 +12,8 @@ a:focus { background: #99ff99; border: 1px black dotted }
 </head>
 <body>
 <%PERL>
-my $jifty_dirname = File::Basename::dirname($INC{'Jifty.pm'})."/";
-my $app_dirname = File::Basename::dirname($0)."/../lib/";
+my $jifty_dirname = Jifty::Util->jifty_root."/";
+my $app_dirname = Jifty::Util->app_root."/lib/";
 $n =~ s/::/\//g;
 
 my @options = (
