--- a/share/web/templates/__jifty/online_docs/toc.html
+++ b/share/web/templates/__jifty/online_docs/toc.html
@@ -13,7 +13,7 @@ a:focus { background: #99ff99; border: 1px black dotted }
 <body style="background: #dddddd">
 <%PERL>
 my @found;
-my $app_dirname = File::Basename::dirname($0)."/../lib";
+my $app_dirname = Jifty::Util->app_root ."/lib";
 File::Find::find(
     { untaint => 1,
       wanted => sub {
