* Jifty::Util->jifty_root now actually works, making the online docs work
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@172 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/online_docs/toc.html
+++ b/share/web/templates/__jifty/online_docs/toc.html
@@ -13,7 +13,6 @@ a:focus { background: #99ff99; border: 1px black dotted }
 <body style="background: #dddddd">
 <%PERL>
 my @found;
-my $app_dirname = Jifty::Util->app_root ."/lib";
 File::Find::find(
     { untaint => 1,
       wanted => sub {
@@ -24,7 +23,7 @@ File::Find::find(
         $name =~ s!\W!::!g;
         push @found, $name;
     },follow => ($^O ne 'MSWin32') },
-    $app_dirname,
+    Jifty::Util->app_root ."/lib",
 );
 
 File::Find::find(
@@ -39,8 +38,6 @@ File::Find::find(
     },follow => ($^O ne 'MSWin32') },
     Jifty::Util->jifty_root,
 );
-
-
 
 my $indent = 0;
 my $prev = '';
