* Avoid an undefined warning
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@173 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/online_docs/toc.html
+++ b/share/web/templates/__jifty/online_docs/toc.html
@@ -43,6 +43,7 @@ my $indent = 0;
 my $prev = '';
 foreach my $file (sort @found) {
     my ($parent, $name) = ($1, $2) if $file =~ /(?:(.*)::)?(\w+)$/;
+    $parent = '' unless defined $parent;
     if ($file =~ /^$prev\::(.*)/) {
         my $foo = $1;
         while ($foo =~ s/(\w+):://) {
