* Make submenus not break the main menu layout
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@194 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/nav.css
+++ b/share/web/static/css/nav.css
@@ -2,7 +2,6 @@
 
 
 div#navigation {
-        border:1px solid #000;
         width:598px;
         height:45px;
         position:relative;
@@ -31,8 +30,8 @@ ul#submenu {
         padding:5px 0;
         background-color:#24568E;
         list-style-type:none;
-        position: relative;
-        top:5px;
+        position: absolute;
+        top: 22px;
         left:0;
 }
 ul#submenu li {
