* Fixed docs for an installed Jifty
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@222 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/online_docs/toc.html
+++ b/share/web/templates/__jifty/online_docs/toc.html
@@ -26,14 +26,16 @@ File::Find::find(
     Jifty::Util->app_root ."/lib",
 );
 
+
 File::Find::find(
     { untaint => 1,
       wanted => sub {
-        return unless /(\w+)\.(?:pm|pod)$/;
-        my $name = $File::Find::name;
+        warn $File::Find::name;
+        return unless $File::Find::name =~ /^(?:.*?)(Jifty.*?\.(?:pm|pod))$/;
+        my $name = $1;
         $name =~ s/.*lib\b.//;
         $name =~ s!\.(?:pm|pod)!!i;
-        $name =~ s!\W!::!g;
+        $name =~ s!\/!::!g;
         push @found, $name;
     },follow => ($^O ne 'MSWin32') },
     Jifty::Util->jifty_root,
