* Mapping of arguments of actions
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@526 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/t/Mapper/web/templates/index.html
+++ b/t/Mapper/web/templates/index.html
@@ -5,3 +5,12 @@
 <% Jifty->web->form->submit( label => 'Get the holy grail') %>
 
 <% Jifty->web->form->end %>
+
+
+<% Jifty->web->form->start %>
+% my $grail  = Jifty->web->form->add_action( class => 'GetGrail',    order => 1 );
+% my $bridge = Jifty->web->new_action( class => 'CrossBridge', order => 2 );
+<% $bridge->form_field( 'quest',  default_value => { result_of => $grail, name => 'castle' } ) %>
+<% $bridge->form_field( 'colour', default_value => 'Green' ) %>
+<% Jifty->web->form->submit( label => 'Do both') %>
+<% Jifty->web->form->end %>
