--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -32,7 +32,7 @@ div#render_info_tree {
    display: none;
    position: fixed;
    font-size: 0.5em;
-   border 1px solid yellow;
+   border: 1px solid yellow;
    right: 1em;
    bottom: 1em;
    border: 2px solid #fc0;
