* clearing floats on inline submit buttons. stupid rule that broke things
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@571 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -71,13 +71,12 @@ span.submit_button {
 /*
 These styles are meant to be placed after (and hence override) the current CSS
 for forms.  Some of the rules aren't needed if previous behavior doesn't need to
-be overrided.  ".inline" is our hypothetical inline form class.
+be overridden.  ".inline" is our inline form class.
 */
 
 div.inline,
 div.inline .submit_button
 {
-    clear: both;
 }
 
 div.inline div.form_field {
