--- a/share/web/static/css/calendar.css
+++ b/share/web/static/css/calendar.css
@@ -9,3 +9,10 @@
     padding: 0 1em 0 1em;
     font-size: 1.5em;
 }
+
+.calendar-link {
+    padding-left: 20px;
+    background: url(/images/silk/calendar.png) no-repeat;
+    letter-spacing: -1000em;
+}
+
