Make sure buttons have the proper class and change the styling to reflect this
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@620 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -55,11 +55,14 @@ input, textarea {
 
 .submit_button input {
     clear: both;
+    margin: 0.5em 0 0 16%;
+}
+
+input.button {
     border: 1px outset black;
     background: white;
     padding: 0.2em 1em;
     font-weight: bold;
-    margin: 0.5em 0 0 16%;
 }
 
 h2.inline input {
