* Halos now show SQL statements executed in each component
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@639 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/halos.css
+++ b/share/web/static/css/halos.css
@@ -31,7 +31,7 @@ span.halo_button {
 div#render_info_tree {
    display: none;
    position: fixed;
-   font-size: 0.5em;
+   background: white;
    border: 1px solid yellow;
    right: 1em;
    bottom: 1em;
