* chromatic supplied a patch to switch from UNIVERSAL::isa to ->isa. * Fixed some nits turned up by internal testing.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@691 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/admin/index.html
+++ b/share/web/templates/__jifty/admin/index.html
@@ -22,7 +22,7 @@ for my $model ( __PACKAGE__->jifty_app_models ) {
     # TODO XXX FIXME:
     #   This *will* try to generate SQL for abstract base classes you might
     #   stick in $AC::Model::.
-    next if not UNIVERSAL::isa( $model, 'Jifty::Record' );
+    next unless $model->isa( 'Jifty::Record' );
     next if $model =~ /::SUPER$/;
     push @models, $model;
 }
