Add a surrounding div around keybindings to facilitate styling
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@701 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/keybindings.css
+++ b/share/web/static/css/keybindings.css
@@ -8,6 +8,9 @@ div.keybindings:before {
     content: "Hotkeys:";
 }
 
+dl.keybindings .keybinding {
+    display: inline;
+}
 
 dl.keybindings dt  {
     margin: 0;
