--- a/share/web/templates/index.html
+++ b/share/web/templates/index.html
@@ -1,3 +1,3 @@
 <&|/_elements/wrapper, title => 'Welcome to your new Jifty application' &>
-<img src="/images/pony.jpg" alt="You said you wanted a pony. (Source http://hdl.loc.gov/loc.pnp/cph.3c13461)" />
+<img src="/static/images/pony.jpg" alt="You said you wanted a pony. (Source http://hdl.loc.gov/loc.pnp/cph.3c13461)" />
 </&>
