* More stylish forms * Classes for more of the form fields * Image URL fixes in CSS
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@716 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/calendar.css
+++ b/share/web/static/css/calendar.css
@@ -12,7 +12,7 @@
 
 .calendar-link {
     padding-left: 20px;
-    background: url(/images/silk/calendar.png) no-repeat;
+    background: url(/static/images/silk/calendar.png) no-repeat;
     letter-spacing: -1000em;
 }
 
