--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -43,8 +43,12 @@ div.form_field span.formw {
     text-align: left;
 }
 
-input, textarea {
-    border: 1px inset black;
+input.text, input.date, input.password, textarea, select {
+    border-top: 1px solid #7c7c7c;
+    border-left: 1px solid #c3c3c3;
+    border-right: 1px solid #c3c3c3;
+    border-bottom: 1px solid #ddd;
+    background: #fff url(/static/images/css/fieldbg.gif) repeat-x top;
     padding: 0.2em;
 }
 
