* Create date selection widgets using Behaviour * Specify width of date fields in CSS rather than Perl * Fix problem of no date selection widgets in ajax updated forms
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@718 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -52,6 +52,10 @@ input.text, input.date, input.password, textarea, select {
     padding: 0.2em;
 }
 
+input.date {
+    width: 10em;
+}
+
 .submit_button {
     display: block;
     clear: both;
@@ -63,9 +67,7 @@ input.text, input.date, input.password, textarea, select {
 }
 
 input.button {
-    border: 1px outset black;
-    background: white;
-    padding: 0.2em 1em;
+    padding: 0.15em 1em;
     font-weight: bold;
 }
 
