* Takahashi.js updates for translations
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@733 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/doc/talks/takahashi.css
+++ b/doc/talks/takahashi.css
@@ -159,3 +159,9 @@ tabbox, tabpanels, tabpanel {
 	position: relative;
 }
 
+.subtitle {
+    color: yellow;
+    text-align: center;
+    font-size: 50px;
+    bottom: 0;
+}
