--- a/doc/talks/takahashi.css
+++ b/doc/talks/takahashi.css
@@ -24,10 +24,13 @@
  * ***** END LICENSE BLOCK ***** */
 
 #canvas {
+    /*
 	background: black !important;
 	color: white !important;
+        */
         /* font-weight: bold; */
 	font-family:
+                "Candara"
                 "Georgia"
                 "DejaVu Serif Condensed"
                 "Arial"
@@ -165,8 +168,12 @@ tabbox, tabpanels, tabpanel {
 }
 
 .subtitle {
+    font-family: "mikachan";
     color: yellow;
     text-align: center;
     font-size: 50px;
+    background: black;
     bottom: 0;
+    padding-bottom: 10px;
+    padding-top: 10px;
 }
