--- a/doc/talks/takahashi.css
+++ b/doc/talks/takahashi.css
@@ -95,7 +95,7 @@
 }
 
 .tag {
-        color: #33ff33;
+        color: #33f;
 }
 .att {
         color: #9999cc;
@@ -171,9 +171,10 @@ tabbox, tabpanels, tabpanel {
     font-family: "mikachan";
     color: yellow;
     text-align: center;
-    font-size: 50px;
+    font-size: 40px;
     background: black;
-    bottom: 0;
+    bottom: 10;
     padding-bottom: 10px;
     padding-top: 10px;
+    spacing: 10px;
 }
