--- a/doc/talks/takahashi.css
+++ b/doc/talks/takahashi.css
@@ -168,7 +168,7 @@ tabbox, tabpanels, tabpanel {
 }
 
 .subtitle {
-    font-family: "mikachan";
+    font-family: "Kochi Gothic";
     color: yellow;
     text-align: center;
     font-size: 40px;
