* First working pass of internationalization
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@780 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/index.html
+++ b/share/web/templates/index.html
@@ -1,3 +1,5 @@
-<&|/_elements/wrapper, title => 'Welcome to your new Jifty application' &>
+<&|/_elements/wrapper, title => _('Welcome to your new Jifty application') &>
 <img src="/static/images/pony.jpg" alt="You said you wanted a pony. (Source http://hdl.loc.gov/loc.pnp/cph.3c13461)" />
+
+<%_('Pony')%>
 </&>
