* First pass localization
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@782 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/admin/index.html
+++ b/share/web/templates/__jifty/admin/index.html
@@ -30,11 +30,11 @@ for my $model ( __PACKAGE__->jifty_app_models ) {
 </%init>
 <&|/_elements/wrapper, title => 'Jifty Administrative Console' &>
 
-<h1>Database Administration</h1>
+<h1><%_('Database Administration')%></h1>
 
-<p>This console lets you manage the records in your Jifty database. Below, you should see a list of all your database tables. Feel free to go through and add, delete or modify records.</p>
+<p><%_('This console lets you manage the records in your Jifty database. Below, you should see a list of all your database tables. Feel free to go through and add, delete or modify records.')%></p>
 
-<p>To disable this administrative console, add "framework: AdminMode: 0" to your application's configuration file.</p>
+<p><%_('To disable this administrative console, add "framework: AdminMode: 0" to your application's configuration file.')%></p>
     
 
 <ul>
