* First template extraction
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@783 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/admin/index.html
+++ b/share/web/templates/__jifty/admin/index.html
@@ -34,7 +34,7 @@ for my $model ( __PACKAGE__->jifty_app_models ) {
 
 <p><%_('This console lets you manage the records in your Jifty database. Below, you should see a list of all your database tables. Feel free to go through and add, delete or modify records.')%></p>
 
-<p><%_('To disable this administrative console, add "framework: AdminMode: 0" to your application's configuration file.')%></p>
+<p><%_(q{To disable this administrative console, add "framework: AdminMode: 0" to your application's configuration file.})%></p>
     
 
 <ul>
