* 01-raw-api.t in Mapper needs to be a bit more liberal in accepting Syck lists
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@794 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/doc/talks/takahashi.css
+++ b/doc/talks/takahashi.css
@@ -173,8 +173,9 @@ tabbox, tabpanels, tabpanel {
     text-align: center;
     font-size: 40px;
     background: black;
-    bottom: 10;
+    height: auto;
     padding-bottom: 10px;
     padding-top: 10px;
+    margin: 0px;
     spacing: 10px;
 }
