* oops. revert the extra bogus commits.   (the last commit also fixed RPS::I18N to _AUTO fallback    on non-english languages, as well as turn on "use utf8"    for all compoments so that textual utf8 works there.)   Because of this change, :utf8 is now turned on again   on the Mason view.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@795 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/doc/talks/takahashi.css
+++ b/doc/talks/takahashi.css
@@ -173,9 +173,8 @@ tabbox, tabpanels, tabpanel {
     text-align: center;
     font-size: 40px;
     background: black;
-    height: auto;
+    bottom: 10;
     padding-bottom: 10px;
     padding-top: 10px;
-    margin: 0px;
     spacing: 10px;
 }
