* Access to all actions through the admin UI  * Don't use Jifty->web->return on the model pages; we don't have a continuation push to them  * Show action errors if we're in devel mode
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@816 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/admin/index.html
+++ b/share/web/templates/__jifty/admin/index.html
@@ -36,13 +36,23 @@ for my $model ( __PACKAGE__->jifty_app_models ) {
 
 <p><%_(q{To disable this administrative console, add "framework: AdminMode: 0" to your application's configuration file.})%></p>
     
-
+<h2><%_('Models')%></h2>
 <ul>
 % foreach my $model (@models) {
 % next unless ($model =~ /^(?:.*)::(.*?)$/);
 % my $type = $1;
-<li><% Jifty->web->link( url => '/__jifty/admin/'.$type, label => $type)%>
+<li><% Jifty->web->link( url => '/__jifty/admin/model/'.$type, label => $type)%>
 %}
 </ul>
+
+<h2><%_('Actions')%></h2>
+<ul>
+% foreach my $action (Jifty->api->actions) {
+<li><% Jifty->web->link( url => '/__jifty/admin/action/'.$action, label => $action) %>
+% }
+</ul>
+
+<h2>Done?</h2>
+<% Jifty->web->return( to => "/", label => 'Back to the application') %>
 
 </&>
