--- a/share/web/templates/index.html
+++ b/share/web/templates/index.html
@@ -1,4 +1,4 @@
 <&|/_elements/wrapper, title => _('Welcome to your new Jifty application') &>
 <img src="/static/images/pony.jpg" 
-     alt="<%_('You said you wanted a pony. (Source [_1])','http://hdl.loc.gov/loc.pnp/cph.3c13461')%>" />
+     alt="<%_('You said you wanted a pony. (Source %1)','http://hdl.loc.gov/loc.pnp/cph.3c13461')%>" />
 </&>
