share/web/templates/__jifty/online_docs/content.html - disable magic schema quoting for core module docs
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@970 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/online_docs/content.html
+++ b/share/web/templates/__jifty/online_docs/content.html
@@ -34,8 +34,10 @@ foreach my $file (@options) {
 my $body;
 my $schema;
 my $converter = Pod::Simple::HTML->new();
-if ($total_body =~ /package (.*?)::Schema;(.*)package/ismx) {
-     $schema = $2;
+if($n !~ /^Jifty\//) {
+    if ($total_body =~ /package (.*?)::Schema;(.*)package/ismx) {
+         $schema = $2;
+    }
 }
 
 
