Support for "warnings" in addition to the existing "errors" and "validators" from Sean E. Millichamp
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1024 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -31,7 +31,7 @@ div.form_field .hints {
     color: #999999;
 }
 
-div.form_field .error {
+div.form_field .error, div.form_field .warning {
     float: right;
     width: 88%;
     text-align: left;
