* Cleaned up the admin ui css a little bit so it renders a bit more right
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1073 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -119,6 +119,12 @@ div.inline div.form_field label {
 }
 
 
+/* So the admin ui is one row per line */
+
+.jifty_admin.item.inline {
+     clear: both;
+ }
+
 div.subline {
     display: inline;
     float: left;  
