--- a/share/web/static/css/main.css
+++ b/share/web/static/css/main.css
@@ -1,6 +1,7 @@
 @import "app-base.css";
 @import "base.css";
 @import "nav.css";
+@import "context-menus.css";
 @import "calendar.css";
 @import "combobox.css";
 @import "keybindings.css";
