--- a/share/web/static/css/forms.css
+++ b/share/web/static/css/forms.css
@@ -14,7 +14,7 @@ div.form_field {
     float: left;
 }
 
-div.form_field label {
+div.form_field label.label {
     float: left;
     width: 15%;
     text-align: right;
@@ -95,7 +95,7 @@ div.inline div.form_field {
     margin-right: 0.5em;
 }
 
-div.inline div.form_field label,
+div.inline div.form_field label.label,
 div.inline .hints,
 div.inline .error
 {
@@ -113,7 +113,7 @@ div.inline .hints {
 
 }
 
-div.inline div.form_field label {
+div.inline div.form_field label.label {
     /* aesthetic */
     padding-bottom: 0.1em;
 }
