Make sure the image shows up
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1161 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/context-menus.css
+++ b/share/web/static/css/context-menus.css
@@ -56,6 +56,7 @@ ul.context_menu, ul.context_menu ul {
     border: 1px solid transparent;
     color: white;
     margin-left: 0.3em;
+    min-height: 1em;
 }
 
 .context_menu li.toplevel:hover .expand a {
