Adjust Module::Pluggable uses for the Holy Emacs Followers. Do not load .#ThisIsABackupFile!
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1235 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/templates/__jifty/admin/index.html
+++ b/share/web/templates/__jifty/admin/index.html
@@ -10,6 +10,7 @@ my @models;
 # names.
 Module::Pluggable->import(
     require     => 1,
+    except      => qr/\.#/,
     search_path => [  $ApplicationClass . "::Model" ],
     sub_name    => 'jifty_app_models',
 );
