--- a/share/web/templates/__jifty/online_docs/content.html
+++ b/share/web/templates/__jifty/online_docs/content.html
@@ -47,7 +47,7 @@ $body =~ s{.*?<body [^>]+>}{}s;
 $body =~ s{</body>\s*</html>\s*$}{};
 $n    =~ s{/}{::}g;
 $m->print("<h1>$n</h1>");
-$m->print("<h2><%_('Schema')%></h2><pre>$schema</pre>") if ($schema);
+$m->print("<h2>"._('Schema')."</h2><pre>$schema</pre>") if ($schema);
 $body =~ s{<a href="http://search\.cpan\.org/perldoc\?(Jifty%3A%3A[^"]+)"([^>]*)>}{<a href="content.html?n=$1"$2>}g;
 $body =~ s!</li>\n\t<ul>!<ul>!;
 $body =~ s!</ul>!</ul></li>!;
