* A more complete draft of my npw talk
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1274 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/doc/talks/takahashi.css
+++ b/doc/talks/takahashi.css
@@ -168,6 +168,7 @@ tabbox, tabpanels, tabpanel {
 }
 
 .subtitle {
+	display: none;
     font-family: "Kochi Gothic";
     color: yellow;
     text-align: center;
