.keybindings -> #keybindings for a slight Behaviour performance boost
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@1286 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/web/static/css/keybindings.css
+++ b/share/web/static/css/keybindings.css
@@ -1,10 +1,10 @@
-div.keybindings {
+div#keybindings {
     color: #666666;
     margin-top: 2em;
 
 }
 
-div.keybindings:before {
+div#keybindings:before {
     content: "Hotkeys:";
 }
 
