--- a/t/TestApp/share/web/templates/index.html
+++ b/t/TestApp/share/web/templates/index.html
@@ -1,3 +1,3 @@
 <&|/_elements/wrapper, title => 'Jifty Test Application' &>
-<img src="/images/pony.jpg" />
+<img src="/images/pony.jpg" alt="A Pony"/>
 </&>
